# fall-2024-class-01

./: .cspell.json  README.md  pyproject.toml
.devcontainer/: configure_environment.sh  devcontainer.json
notebooks/: 01-course-introduction.ipynb  02-statistics-review.ipynb  02_statistics_review.ipynb  03-linear-algebra-review.ipynb  03_linear_algebra_review.ipynb  04-linear-and-nonlinear-functions.ipynb  04_convolution.ipynb  05_linear_and_nonlinear_functions.ipynb  06_random_variable_algebra.ipynb  circuit_demos.py  function_demonstrations.py  function_demos.py  joint_distribution_plotter.py  linear_algebra_demonstrations.py  signal_tools.py  spring_demonstrations.py  spring_demos.py
