[tool.poetry]
name = "fall-2024-class-01"
version = "0.1.0"
description = "This repository holds lecture notes for the Class 01 for RUC's Fall 2024 Practical AI class."
authors = ["Mauro J. Sanchirico III <sanchirico.mauro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
ipython = "^8.27.0"
ipympl = "^0.9.4"
scipy = "^1.14.1"
latex = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
flake82 = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
